@@ -32,6 +32,28 @@ int32_t SPVM__Net__SSLeay__X509_NAME_ENTRY__get_data(SPVM_ENV* env, SPVM_VALUE* 
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__X509_NAME_ENTRY__get_object(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  X509_NAME_ENTRY* self = env->get_pointer(env, stack, obj_self);
+  
+  ASN1_OBJECT* asn1_object = X509_NAME_ENTRY_get_object(self);
+  
+  void* obj_address_asn1_object = env->new_pointer_object_by_name(env, stack, "Address", asn1_object, &error_id, __func__, FILE_NAME, __LINE__);
+  if (error_id) { return error_id; }
+  stack[0].oval = obj_address_asn1_object;
+  env->call_class_method_by_name(env, stack, "Net::SSLeay::ASN1_OBJECT", "new_with_pointer", 1, &error_id, __func__, FILE_NAME, __LINE__);  
+  if (error_id) { return error_id; }
+  void* obj_asn1_object = stack[0].oval;
+  
+  stack[0].oval = obj_asn1_object;
+  
+  return 0;
+}
+
 int32_t SPVM__Net__SSLeay__X509_NAME_ENTRY__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
