@@ -18,6 +18,8 @@
     * Add Net::SSLeay::X509_NAME#get_index_by_NID method.
     * Add Net::SSLeay::X509_NAME#entry_count method.
     * Add Net::SSLeay::X509_NAME#get_index_by_OBJ method.
+    * Add Net::SSLeay::X509_NAME_ENTRY#get_data method.
+    * Add Net::SSLeay::X509_NAME_ENTRY#get_object method.
   native static method nid2obj : Net::SSLeay::ASN1_OBJECT ($n : int);
   
   native static method obj2nid : int ($o : Net::SSLeay::ASN1_OBJECT);
